--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: ilstax # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+repo: boz-status # The name of this repository
 assignees:
   - iLStAx
 sites:
