--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ assignees:
   - iLStAx
 sites:
   - name: Bournout Zero
-    url: https://burnout-zero.com
+    url: https://www.burnout-zero.com
   - name: App Burnout Zero
     url: https://app.burnout-zero.com
   - name: Dev Burnout Zero
