--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,7 +15,7 @@ sites:
   - name: Staging Burnout Zero
     url: https://staging.burnout-zero.com
   - name: Staging-dev Burnout Zero
-    url: https://staging-dev.burnout-zero.com/healthz
+    url: https://back-staging.burnout-zero.com/healthz
   - name: Prod Back Burnout Zero
     url: https://back.burnout-zero.com/healthz
 
